--- a/LLM_Business_News_Parsing/alg_LLAMA_function_calling.tex
+++ b/LLM_Business_News_Parsing/alg_LLAMA_function_calling.tex
@@ -39,11 +39,11 @@
 \begin{quote}
 Parameters: \{\texttt{firms}: \bblue{\texttt{array}} of objects\}, where each object contains:
             \begin{itemize}
-                \item \texttt{firm}: \hspace{2.3cm} \bblue{\texttt{string}} (each one firm in \texttt{firms})
-                \item \texttt{ticker}: \hspace{1.9cm} \bblue{\texttt{string}} (stock market ticker)
-                \item \texttt{shock\_type}: \hspace{1cm} \{demand, supply, financial, policy, technology\}
-                \item \texttt{shock\_magnitude}: \hspace{0cm} \{minor, major\}
-                \item \texttt{shock\_direction}: \hspace{0.cm} \{positive, negative\}
+                \item \texttt{firm}: \hspace{2.1cm} \bblue{\texttt{string}} (\qquote{each one firm in \texttt{firms}})
+                \item \texttt{ticker}: \hspace{1.7cm} \bblue{\texttt{string}} (\qquote{stock market ticker})
+                \item \texttt{shock\_type}: \hspace{0.9cm} \bblue{\texttt{enum}} \{demand, supply, financial, policy, technology\}
+                \item \texttt{shock\_magnitude}:  \hspace{0cm}\bblue{\texttt{enum}} \{minor, major\}
+                \item \texttt{shock\_direction}: \hspace{0cm}\bblue{\texttt{enum}} \{positive, negative\}
             \end{itemize} 
 \end{quote} 
 \end{quote} 
