--- a/LLM_Business_News_Parsing/txt_introduction.tex
+++ b/LLM_Business_News_Parsing/txt_introduction.tex
@@ -1,7 +1,7 @@
 %----------------------------------------------------
 % 7th October 2024 | Introduction (used GPT4o with canvas) | https://chatgpt.com/share/6704e351-460c-800d-a267-1656528e9ec7
 %----------------------------------------------------
-In financial markets, news plays a pivotal role in shaping stock prices. Every day, market participants respond to a broad spectrum of news-ranging from firm-specific announcements, such as earnings releases, to macroeconomic events, such as central bank interest rate announcements, or geopolitical developments, like international trade conflicts or political elections. The Efficient Market Hypothesis (EMH), introduced by \cite{fama1970efficient}, posits that markets efficiently incorporate new information almost instantaneously. Both theoretical perspectives and empirical observations indicate that markets do not always exhibit such efficiency, particularly when the information is complex or ambiguous. This discrepancy between theory and reality suggests significant room for improvement in understanding how news is processed by market participants and how it influences asset prices.
+In financial markets, news plays a pivotal role in shaping stock prices. Every day, market participants respond to a broad spectrum of news ranging from firm-specific announcements, such as earnings releases, to macroeconomic events, such as central bank interest rate announcements, or geopolitical developments, like international trade conflicts or political elections. The Efficient Market Hypothesis (EMH), introduced by \cite{fama1970efficient}, posits that markets efficiently incorporate new information almost instantaneously. Both theoretical perspectives and empirical observations indicate that markets do not always exhibit such efficiency, particularly when the information is complex or ambiguous. This discrepancy between theory and reality suggests significant room for improvement in understanding how news is processed by market participants and how it influences asset prices.
 
 A substantial body of literature has endeavored to predict market reactions to news, yet significant gaps persist. First, there is a lack of granularity in the analysis of information. Traditional approaches frequently rely on sentiment analysis, reducing the richness of news content to binary classifications of positive or negative sentiment. Despite their reductionist nature, sentiment analysis remains popular due to the ease of implementation and interpretability
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -10,7 +10,10 @@ A substantial body of literature has endeavored to predict market reactions to n
 \cite{lopez2023can}).
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-Sentiment analysis often misses the intricacy inherent in news-such as the interplay between multiple factors or subtle shifts in tone. More recent research has sought to enhance this granularity through topic modeling, which categorizes text into broad themes 
+Sentiment analysis often misses the intricacy inherent in news and is based on linguistic patterns, rather than on economically relevant considerations.
+%--such as the interplay between multiple factors--
+% or subtle shifts in tone. 
+ More recent research has sought to enhance this granularity through topic modeling, which categorizes text into broad themes 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 (\cite{antweiler2006us}, \cite{hansen2018transparency}, \cite{bybee2021business}, \cite{bybee2023narrative}).
@@ -18,7 +21,7 @@ Sentiment analysis often misses the intricacy inherent in news-such as the inter
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 However, these models are limited in adapting to new and evolving information and lack the specificity needed to assess the precise impact of news on individual firms or sectors. Topic models can identify broad themes, but they struggle to capture the changing context of financial news, particularly when new narratives emerge, such as unexpected geopolitical events or technological disruptions.
 
-Second, there is an insufficient focus on firm-specific analysis in the existing literature. Many studies examine the impact of news on broader market indices, such as the S\&P 500 or DJIA, rather than on individual firms. While research by 
+Second, there is an insufficient focus on firm-specific analysis in the existing literature. Many studies examine the impact of news on broader market indices, such as the S\&P500 or DJIA, rather than on individual firms. While research by 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \cite{cutler1988moves}, \cite{mitchell1994impact}, \cite{bollen2011twitter}, \cite{garcia2013sentiment}, \cite{baker2016measuring}, \cite{manela2017news}, \cite{baker2021triggers} 
@@ -34,12 +37,19 @@ Third, there is an over-reliance on headlines as the basis for news analysis. He
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 utilize headlines to gauge market sentiment.  Headlines are designed to capture attention, not to provide a comprehensive summary of all relevant details. Consequently, relying solely on headlines can lead to overly simplistic analyses that fail to capture critical contextual details necessary for accurately predicting market reactions.
 
-This paper seeks to address these three limitations by leveraging Large Language Models (LLMs) to facilitate a more granular, firm-specific analysis of complete news articles. LLMs, such as GPT and LLaMA, offer a sophisticated mechanism for processing news due to their ability to handle large contexts, understand intricate language patterns, and recognize implicit relationships. For example, LLMs could simulate human analysis of news articles, understanding the economic shocks that a news article describes upon a specific firm-such as supply chain disruptions affecting manufacturing, shifts in consumer demand impacting retail, or policy changes influencing energy sectors-and quantifying both the magnitude and direction of these impacts on specific firms. Unlike traditional sentiment scores, LLMs are capable of capturing the full context of articles, thereby enriching our understanding of the specific economic effects conveyed by news. The ability of LLMs to understand nuanced language, recognize implicit relationships, and integrate contextual information makes them particularly well-suited for analyzing financial news. By using LLMs, we can move beyond simplistic sentiment measures and towards a more holistic understanding of how news influences firm behavior and market outcomes.
+This paper seeks to address these three limitations by leveraging Large Language Models (LLMs) to facilitate a more granular, firm-specific analysis of complete news articles. LLMs, such as GPT and LLaMA, offer a sophisticated mechanism for processing news due to their ability to handle large contexts, understand intricate language patterns, and recognize implicit relationships. For example, LLMs could simulate human analysis of news articles, understanding the economic shocks that a news article describes upon a specific firm --such as supply chain disruptions affecting manufacturing, shifts in consumer demand impacting retail, or policy changes influencing energy sectors-- and quantifying both the magnitude and direction of these impacts on specific firms. Unlike traditional sentiment scores, LLMs are capable of capturing the full context of articles, thereby enriching our understanding of the specific economic effects conveyed by news. The ability of LLMs to understand nuanced language, recognize implicit relationships, and integrate contextual information makes them particularly well-suited for analyzing financial news. By using LLMs, we can move beyond simplistic sentiment measures and towards a more holistic understanding of how news influences firm behavior and market outcomes.
 
-In this study, I apply LLMs to a dataset of Spanish business news articles from DowJones Newswires, spanning June 2020 to September 2021-a particularly unstable period marked by economic disruptions due to the COVID-19 pandemic. This period was purposefully chosen because it presents a challenging environment for traditional sentiment and topic modeling methods, which often fail under rapidly evolving conditions. By testing the proposed methodology during such an unstable period, we aim to evaluate its robustness. It is relatively easy for traditional methods to perform well in stable times, but during periods of heightened uncertainty, their limitations become apparent. This is precisely the scenario in which we seek to determine whether LLM-based analysis can provide superior insights. As a benchmark, we will compare the LLM clustering method with simple KMeans clustering of embeddings. That is, one could simply represent a news article as a  vector in high-dimensional space and then apply an unsupervised clustering method such as KMeans. This is more sophisticated than a sentiment or topic based method, but still does not rely on a comprehensive parsing of the news article content. Later on, we pass news articles through an LLM through a schema that asks the LLM to classify article-implied firm-specific shocks according to their type (demand, supply, technological, policy, financial), magnitude (minor, major) and direction (positive, negative). By categorizing and comprehending the economic implications of news, LLMs provide insights that extend beyond mere sentiment analysis, helping to elucidate the underlying mechanisms driving market behavior. The approach taken in this paper involves not only identifying the firms mentioned in each article but also determining the type, magnitude, and direction of the shocks implied by the news. This allows for a more detailed assessment of how specific pieces of information influence particular firms, providing a richer and more precise picture of market dynamics.
+In this study, I apply LLMs to a dataset of Spanish business news articles from DowJones Newswires, spanning June 2020 to September 2021, a particularly unstable period marked by economic disruptions due to the COVID-19 pandemic. This period was purposefully chosen because it presents a challenging environment for traditional
+% sentiment and topic modeling 
+ methods, which often fail under rapidly evolving conditions. 
+% By testing the proposed methodology during such an unstable period, we aim to evaluate its robustness. It is relatively easy for traditional methods to perform well in stable times, but during periods of heightened uncertainty, their limitations become apparent. 
+ This is precisely the scenario in which we seek to determine whether LLM-based analysis can provide superior insights. As a benchmark, we will compare our LLM clustering method with KMeans clustering of embeddings. That is, one could simply represent a news article as a  vector in high-dimensional space and then apply an unsupervised clustering method such as KMeans. This is more sophisticated than a sentiment or topic based method, but still does not rely on a comprehensive parsing of the news article content. 
+
+Our methodology consists on defining a schema with which we will guide an LLM to detect article-implied firm-specific shocks from news articles and to further classify them by their type (demand, supply, technological, policy, financial), magnitude (minor, major) and direction (positive, negative). By categorizing and comprehending the economic implications of news, LLMs provide insights that extend beyond mere sentiment analysis, helping to elucidate the underlying mechanisms driving market behavior. The approach taken in this paper involves not only identifying the firms mentioned in each article but also determining the type, magnitude, and direction of the shocks implied by the news. This allows for a more detailed assessment of how specific pieces of information influence particular firms, providing a richer and more precise picture of market dynamics.
 
 The objective of this paper is not to parse the largest dataset available or to develop a realistic trading strategy with commercial application. Rather, it aims to introduce a novel methodology for analyzing news articles in a granular and firm-specific manner, demonstrating its utility through a reduced dataset. By focusing on a smaller, high-quality dataset, the study emphasizes methodological rigor and interpretability. The findings are intended to contribute to a more nuanced understanding of how market participants process news, using a simple trading strategy to illustrate the potential of this approach in capturing the complexities of information processing in financial markets. This methodological contribution lays the groundwork for future research that could extend these techniques to larger datasets and more complex trading applications, ultimately enhancing our ability to understand and predict market behavior in response to news.
 
+The remainder of this paper is organized as follows: Section 2 presents the dataset and preprocessing steps. Section 3 provides a mathematical framework to treat news articles, Section 4 focuses on clustering news articles, first we present our benchmark framework (KMeans clusteting of vector embeddings) and then, our novel LLM-based methodology. In Section 5 we construct a simple trading strategy: first we launch beta-neutral positions for each firm-article pair, then we extract the cluster-average Sharpe Ratios, and finally we select the optimal clusters for trading based on two algorithms that we propose. Lastly, we can form a portfolio and evaluate the trading strategy. Section 6 performs robustness checks by looking at the dependence of our trading strategy results to hyperparameter variability. Finally, Section 7 concludes concludes and discusses the implications of the findings.
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%	 LITERATURE REVIEW 		%%%%%%%%%%%%%
@@ -69,8 +79,8 @@ The objective of this paper is not to parse the largest dataset available or to 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-The remainder of this paper is organized as follows: Section 2 discusses the dataset and preprocessing steps. Section 3 progresses through the methodology and results, comparing the use of KMeans and LLMs for news analysis and clustering. Section 4 presents the robustness checks, showing that results are not sensitive to hyperparameter variability. Section 5 concludes and discusses the implications of the findings, highlighting contributions and avenues for future research.
-
+%The remainder of this paper is organized as follows: Section 2 discusses the dataset and preprocessing steps. Section 3 progresses through the methodology and results, comparing the use of KMeans and LLMs for news analysis and clustering. Section 4 presents the robustness checks, showing that results are not sensitive to hyperparameter variability. Section 5 concludes and discusses the implications of the findings, highlighting contributions and avenues for future research.
+%
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
