--- a/LLM_Business_News_Parsing/txt_Model_LLM.tex
+++ b/LLM_Business_News_Parsing/txt_Model_LLM.tex
@@ -1,12 +1,13 @@
-\subsection{What if an LLM reads the news?}
+\subsection{LLM-based approach: \qquote{What if an LLM reads the news?}}
 
-One may wonder whether clustering news articles based on a deeper understanding of their content could lead to a more profitable trading strategy. For this purpose, we feed the news articles to a Large Language Model (LLM) and ask it to analyze them according to a predefined schema.
+\hspace{0.5cm}One may wonder whether empowering an LLM to parse news articles according to a predefined schema that guides it in ellucidating news-implied firm-specific shocks can deliver better insights on how markets react to new information. In this section we will briefly introduce what Large Language Models are, how they have evolved and then, we will dive into how we can guide them to produce an economically structured analysis of business news. 
+%clustering news articles based on a deeper understanding of their content could lead to a more profitable trading strategy. For this purpose, we feed the news articles to a Large Language Model (LLM) and ask it to analyze them according to a predefined schema.
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\subsubsection{Large Language Models}
+\subsubsection*{Large Language Models}
 
-In natural language processing (NLP), Large Language Models (LLMs) are designed to \qquote{understand} and generate human-like text. These models utilize the transformer architecture, which excels in modeling complex language tasks by capturing long-range dependencies and contextual relationships.
+\hspace{0.5cm}In natural language processing (NLP), Large Language Models (LLMs) are designed to \qquote{understand} and generate human-like text. These models utilize the transformer architecture, which excels in modeling complex language tasks by capturing long-range dependencies and contextual relationships.
 
 \mx 
 At the heart of LLMs lies the concept of tokens, which serve as the elemental units of text. Tokens can be individual words, subword units, or characters. Let $x_{1:n}:=\3{x_1, x_2, \ldots, x_n}$ represent a sequence of tokens. The goal of an LLM is to estimate the probability distribution of the next token $x_{n+1}$ conditioned on the previous tokens $x_{1:n}$
@@ -29,14 +30,14 @@ $$
 $$
 
 
-\subsubsection{Evolution of LLMs}
-\hspace{0.5cm} The transformer architecture, introduced in the seminal work "Attention Is All You Need" \citep{vaswani2017attention}, revolutionized LLM development due to its superior handling of long-range dependencies and efficient parallelization of computations.  Subsequent advancements include the encoder-only BERT model \citep{devlin2018bert}, showcasing the power of pre-training on large datasets for fine-tuning on specific tasks. 
+\subsubsection*{Evolution of LLMs}
+\hspace{0.5cm} The transformer architecture, introduced in the seminal work ``\textit{Attention Is All You Need}'' \citep{vaswani2017attention}, revolutionized LLM development due to its superior handling of long-range dependencies and efficient parallelization of computations.  Subsequent advancements include the encoder-only \texttt{BERT} model \citep{devlin2018bert}, showcasing the power of pre-training on large datasets for fine-tuning on specific tasks. 
 
 \mx 
-Conversely, OpenAI's GPT series (\citealp{radford2018improving}) demonstrated the potential of decoder-only models for generative tasks. In particular, the release of GPT-3 marked a significant leap in LLM capabilities with its 175 billion parameters and remarkable few-shot learning abilities. This model highlighted the importance of prompt engineering, where carefully crafted prompts can guide model outputs without extensive fine-tuning.  
+Conversely, OpenAI's \texttt{GPT} series (\citealp{radford2018improving}) demonstrated the potential of decoder-only models for generative tasks. In particular, the release of \texttt{GPT-3} marked a significant leap in LLM capabilities with its 175 billion parameters and remarkable few-shot learning abilities. This model highlighted the importance of prompt engineering, where carefully crafted prompts can guide model outputs without extensive fine-tuning.  
 
 \mx 
-The trend towards open-source models like BLOOM \citep{le2023bloom} and Meta's LLaMA series \citep{touvron2023llama} emphasizes accessibility and transparency in LLM development.  The latest models, including OpenAI's GPT-4 and GPT-4o, Google's Gemini, and Meta's LLaMA 3 and 3.1 continue to push boundaries with improved accuracy, multimodal capabilities, and larger context windows.
+The trend towards open-source models like \texttt{BLOOM} \citep{le2023bloom}, \texttt{Mixtral} and Meta's \texttt{LLaMA} series \citep{touvron2023llama} emphasizes accessibility and transparency in LLM development.  The latest models, including OpenAI's  \texttt{GPT-4o} and \texttt{GPT-o1}, Google's \texttt{Gemini} and \texttt{Mixtral} and \texttt{Gemma}, Anthropic's \texttt{Claude 3.5 Sonnet}, and Meta's \texttt{LLaMA-3}, \texttt{LLaMA-3.1} and  \texttt{LLaMA-3.2} continue to push boundaries with improved accuracy, multimodal capabilities, and larger context windows.
 
 %The transformer architecture presented in the seminal paper "Attention Is All You Need" in 2017 became the foundation for most subsequent LLMs due to its superior ability to handle long-range dependencies and parallelize computations.  The introduction of BERT in 2018, an encoder-only model, demonstrated the power of pre-training on large text corpora and fine-tuning for specific tasks. In contrast, OpenAI's GPT series, starting with GPT-1 in 2018 and gaining widespread attention with GPT-2 in 2019, showcased the capabilities of decoder-only models for generative tasks.
 %
@@ -44,12 +45,12 @@ The trend towards open-source models like BLOOM \citep{le2023bloom} and Meta's L
 %
 %From 2022 onwards, source-available models like BLOOM and Meta's LLaMA series have emphasized the importance of accessibility and transparency in LLM development. The latest models, such as OpenAI's GPT-4o, Google's Gemini, and Meta's LLaMA 3, continue to push the boundaries with improved accuracy, multimodal capabilities, and larger context windows, solidifying the transformer architecture as the standard for LLMs.
 
-\subsubsection{Function Calling with LlaMA-3}
+\subsubsection*{Function Calling with LlaMA-3}
 
-\hspace{0.5cm} In our endeavor we will employ LlaMA-3, developed by Meta AI and released on April 18, 2024. This model has been pre-trained on approximately 15 trillion tokens of text gathered from ``publicly available sources'' and it comes in two sizes: 8 billion and 70 billion parameters. In this application, we will employ the 70B version, which we will access through an API via GroqCloud.
+\hspace{0.5cm} In our endeavor we will employ \texttt{LlaMA-3}, developed by Meta AI and released on April 18, 2024. This model has been pre-trained on approximately 15 trillion tokens of text gathered from ``publicly available sources'' and it comes in two sizes: 8 billion and 70 billion parameters. In this application, we will employ the 70B version, which we will access through an API via \texttt{GroqCloud}.
 
 \mx 
-Moreover, we will employ a \textit{function calling} approach to streamline the process of interacting with the LLM. This implies prespecifying a set of functions to the LLM that will then be passed through our dataset of news articles to obtain a structured output in JSON format. The formal procedure is thoroughly described in the Appendix (\cref{alg:function_calling}).
+Moreover, we will employ a \textit{function calling} approach to streamline the process of interacting with the LLM. This implies prespecifying a set of functions to the LLM that will then be passed through our dataset of news articles to obtain a structured output in \texttt{JSON} format. The formal procedure is thoroughly described in the Appendix (\cref{alg:function_calling}).
 
 \mx 
 Each article $i\in\D$ implies a conversation with the LLM. The structure of the conversation implies defining first a ``system message'', which provides a general context and purpose to the model. In our case:
@@ -58,23 +59,35 @@ Each article $i\in\D$ implies a conversation with the LLM. The structure of the 
 \textit{$-$ You are a function calling LLM that analyses business news in Spanish.  \\
 $-$ For every article, you must identify the firms directly affected by the news. Do not include every firm mentioned in the article, only include those that are directly affected by the shocks narrated therein. 
 \\
-$-$ The identified firms must be Spanish and should be publicly listed in the Spanish exchange (their ticker is of the form 'TICKER.MC'). Do not include non-Spanish foreign firms. Do not include Spanish firms that are not publicly traded. \\
-$-$ For each identified firm, classify the shocks that affect them (type, magnitude, category). The type of shock can be 'demand', 'supply', 'financial', 'policy', or 'technology'. The magnitude can be 'minor' or 'major'. The direction can be 'positive' or 'negative'. \\
+$-$ The identified firms must be Spanish and should be publicly listed in the Spanish exchange (their ticker is of the form `TICKER.MC'). Do not include non-Spanish foreign firms. Do not include Spanish firms that are not publicly traded. \\
+$-$ For each identified firm, classify the shocks that affect them (type, magnitude, category). The type of shock can be `demand', `supply', `financial', `policy', or `technology'. The magnitude can be `minor' or `major'. The direction can be `positive' or `negative'. \\
 $-$ If a firm is affected neutrally by the news article, don't include it in the analysis.
 }
 \end{quote}
 
 Then, a news article is fed to the LLM, for example:
 
+
+
+
+
 %%%%%%%%%%%%%%% ENGLISH VERSION %%%%%%%%%%%%%%%%%%%
-\begin{quote}
-{\centering 
-\textbf{Cellnex will face more competition in Europe}.  \par }
-\textit{
-Telefónica's (TEF.MC) subsidiary, Telxius Telecom, has agreed to sell its telecommunications tower division in Europe and Latin America to American Tower (AMT), which will expand the latter's presence in Europe and increase competition for the Spanish wireless telecommunications group Cellnex Telecom (CLNX.MC), according to Equita Sim. The transaction "represents the entry of a new independent tower operator into the Spanish market and potentially more competition for future growth in the European market as well," says the brokerage firm.	
-%In November, Cellnex reached an agreement with CK Hutchison (0001.HK) to purchase the European tower business and assets of the Hong Kong-listed conglomerate. Telefónica's stock is up 9.6\% to EUR 3.94, while Cellnex's shares are up 0.3\% to EUR 47.79.
-}
-\end{quote}
+
+\begin{news}
+[An article about Cellnex and Telefónica]
+[news:article-cellnex-telefonica]
+{Cellnex will face more competition in Europe}
+Telefónica's (TEF.MC) subsidiary, Telxius Telecom, has agreed to sell its telecommunications tower division in Europe and Latin America to American Tower (AMT), which will expand the latter's presence in Europe and increase competition for the Spanish wireless telecommunications group Cellnex Telecom (CLNX.MC), according to Equita Sim. The transaction "represents the entry of a new independent tower operator into the Spanish market and potentially more competition for future growth in the European market as well," says the brokerage firm.		
+\end{news}
+
+%\begin{quote}
+%{\centering 
+%\textbf{Cellnex will face more competition in Europe}.  \par }
+%\textit{
+%Telefónica's (TEF.MC) subsidiary, Telxius Telecom, has agreed to sell its telecommunications tower division in Europe and Latin America to American Tower (AMT), which will expand the latter's presence in Europe and increase competition for the Spanish wireless telecommunications group Cellnex Telecom (CLNX.MC), according to Equita Sim. The transaction "represents the entry of a new independent tower operator into the Spanish market and potentially more competition for future growth in the European market as well," says the brokerage firm.	
+%%In November, Cellnex reached an agreement with CK Hutchison (0001.HK) to purchase the European tower business and assets of the Hong Kong-listed conglomerate. Telefónica's stock is up 9.6\% to EUR 3.94, while Cellnex's shares are up 0.3\% to EUR 47.79.
+%}
+%\end{quote}
 
 %%%%%%%%%%%%%%% SPANISH VERSION %%%%%%%%%%%%%%%%%%%
 %\begin{quote}
@@ -97,11 +110,12 @@ Next, we define an umbrella function \qquote{firms}, which asks the LLM to ident
 The function calling schema is outlined in \cref{tab:function_calling_structure}. First, we need to prompt the LLM, and then we need to specify the desired format of its response. The ``Options'' column imposes the answer format that the LLM must follow. For example, in \texttt{firms}, the ``\texttt{array}'' option indicates that the answer must be an enumeration of firms, while the  ``\texttt{string}'' option in the subfunctions \texttt{firm} and \texttt{ticker} indicates that the answer must be a single name. Finally, the \texttt{shock\_} subfunctions ask the LLM to choose from a predefined set of possible responses.
 
 \mx 
-Note that the firms identified by the LLM do not necessarily match those identified by the pattern recognition algorithm (\texttt{regex}). However, given the high quality of the filtered dataset (the ticker of the firms that are actively involved in the article are explicitly stated), they are almost identical. 
+Note that the firms identified by the LLM are used to validate the firms identified by the pattern recognition algorithm (those extracted with \texttt{regex} by exploiting the pattern \texttt{<WORD>.MC}). As mentioned earlier, given the high quality of the filtered dataset (the ticker of the firms that are actively involved in the article are explicitly stated), they are almost identical. Hence, we indistinctively use $\F_i$ to simplify notation.
 
 \mx 
-The output provided by the LLM comprises two parts: a \qquote{Structured output}, and an \qquote{Unstructured output} justifying the choices made in the \qquote{Structured output}. For our analysis, we will only focus on the structured part.
-
+The output provided by the LLM comprises two parts: a \qquote{Structured output}, and an \qquote{Unstructured output} justifying the choices made in the \qquote{Structured output}. The unstructured part is employed to validate the LLM's output. 
+ By manually reading a small random subsample of such unstructured outputs from the LLM, we can quickly determine whether the LLM has correctly understood the task. If the LLM exhibits confusion, hallucination patterns become apparent in the unstructured output, indicating the need to refine the system instructions and tool descriptions within the function-calling schema to clarify the task for the LLM.
+%In particular, by randomly sampling a subset of LLM-parsed articles, we can quickly tell whether the LLM understood the task or not. If the LLM is lost in the task, hallucination patterns become evident in the unstructured part and we need to adjust the system instructions and the tool descriptions on the function calling schema to clarify the task to the LLM. 
 
 \begin{quote}
 
@@ -144,7 +158,7 @@ This procedure was run on a MacBook Pro M2 with 16GB RAM, 12-core central proces
 
 
 
-%\subsubsection{Function calling schema}
+%\subsubsection*{Function calling schema}
 %The procedure involves calling an LLM through an API and designing a function-calling schema that specifies how the LLM should process each article and structure its output. Formally, we feed our dataset $\mathcal{D}$ to the LLM and ask it to parse every article $i \in \mathcal{D}$. 
 %
 %First, we ask the LLM to extract all the firms $\mathcal{F}_{LLM}^i$ directly affected by the article. Note that the firms identified by the LLM are not necessarily the same as the ones identified by the pattern recognition algorithm from before. However, thanks to the high quality of our dataset, they are almost identical.
@@ -158,8 +172,9 @@ This procedure was run on a MacBook Pro M2 with 16GB RAM, 12-core central proces
 %\end{itemize}
 %}
 
-\subsubsection{Clustering with the LLM}
-Formally, we can define the set $\mathcal B_{LLM}:=\{(i,j)\mid i\in \D ~\wedge~j\in\mathcal F_{LLM}^i \}$ containing all the unique pairs of articles and identified firms. The LLM assigns each pair $(i,j)\in \mathcal B_{LLM}$ with a choice from each of the following sets:
+\subsubsection*{Clustering with the LLM}
+Formally, we can define the set $\mathcal B:=\{(i,j)\mid i\in \D ~\wedge~j\in\mathcal F^i \}$ containing all the unique pairs of articles and identified firms. 
+The LLM assigns each pair $(i,j)\in \mathcal B$ with a choice from each of the following sets:
 %and further ask the 	LLM to classify the event or shock described in the news article for each firm $j \in \mathcal{F}_{LLM}^i$. This classification involves assigning each pair $(i, j)\in\mathcal B_{LLM}$ with a choice from the following sets:
 %
 %One may wonder whether clustering news articles based on a deeper understanding of their content could lead to a more profitable trading strategy. For this purpose, we feed the news articles to GPT and ask it to analyze them according to a schema. 
@@ -197,14 +212,14 @@ $$
 $$
 and each cluster can then be mapped to a positive integer as $\mathcal G_{LLM}\to \{k\in \mathbb{N}_0 \mid 0\leq k\leq 19\}$.
 A representative sample of 3 articles from each cluster is provided in the Appendix \cref{tab:LLM_Articles_3_English}. 
- 
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \mx 
 In \cref{fig:LLM_cluster_distribution} we plot the distribution of news articles through clusters. As we can see, most articles are assigned to clusters 8, 9, 10, and 11, which are the clusters referred to financial events or shocks. Such clusters are mostly composed of articles about the publication of quarterly and semiannual results. More specifically, cluster 8 (\textit{financial, minor, positive}) concentrates around 1/3 of the sample and is associated to the publication of results that mildly surpass the expectations of investors, hence, making this cluster a good candidate for a long trading signal.
 
 \mx 
 On the other hand, other clusters such as 16 (\textit{policy, minor, positive}) and 0 (\textit{demand, minor, positive}) also concentrate a big share of news. Note that no cluster has been assigned to cluster 13 (\textit{technology, minor, negative}).
-
-\mx
+%
 Different from KMeans clustering with embeddings, now the distribution profile of articles through clusters becomes very stable across data splits. This shows that clustering based on a comprehensive analysis of the shocks implied by the article on the affected firms is really stable over time, which constitutes a promising result.
 
 %----------------------------------------------------
@@ -242,65 +257,9 @@ Different from KMeans clustering with embeddings, now the distribution profile o
         \label{fig:test_data}
     \end{subfigure}
     \label{fig:LLM_cluster_distribution}
-\subcaption*{\textit{Note: The upper plot shows the distribution of all the articles $i\in \mathcal D$ through the LLM clusters, while the lower plots show the distributions for the training ($\D^{tr}$), validation ($\D^{val}$), and test ($\D^{test}$) articles respectively.}}
+    \subcaption*{\textit{Note: This figure presents the distribution of news articles across clusters derived using an LLM-based approach. The upper plot shows the distribution for the entire dataset ($\mathcal D$), while the lower plots display the distributions for the training ($\D^{tr}$), validation ($\D^{val}$), and test ($\D^{test}$) datasets. Clusters 8, 9, 10, and 11, which capture financial events or shocks, dominate the distribution, with cluster 8 (\textit{financial, minor, positive}) representing approximately one-third of the dataset. This cluster includes articles related to financial reports with mildly positive outcomes, potentially offering insight for long trading signals. Unlike KMeans clustering with embeddings, this LLM-based clustering shows stable distributions across data splits, highlighting the robustness of this method over time. }}
+%\subcaption*{\textit{Note: The upper plot shows the distribution of all the articles $i\in \mathcal D$ through the LLM clusters, while the lower plots show the distributions for the training ($\D^{tr}$), validation ($\D^{val}$), and test ($\D^{test}$) articles respectively.}}
 \end{figure}
 %----------------------------------------------------
 %----------------------------------------------------
 
-
-In the same fashion as before, we can plot the distribution of cluster-average Sharpe Ratios for each data split (\cref{fig:LLM_cluster-average-SR-by-split}). Different from before, all distributions are left-skewed. The train split's distribution has fat tails which severely contrasts with the light-tailed distribution of the validation sample. In the test data, we observe a bell-shaped distribution with some accumulation of mass at high $SR$s (between 5 and 15).
-%----------------------------------------------------
-\inserthere{fig:LLM_cluster-average-SR-by-split}
-\begin{figure}[H]
-  \centering
-  \caption{Distribution  of Cluster-Average Sharpe Ratios $(\overline{SR}_g)$ by Split}
-  \includegraphics[scale=0.5]{/Users/jesusvillotamiranda/Library/CloudStorage/OneDrive-UniversidaddeLaRioja/CEMFI/__MSc__/__Second_year__/6th_Term/MasterThesis/__Output/LLAMA_Cluster-Avg_SR_Distribution.pdf}
-  \label{fig:LLM_cluster-average-SR-by-split}
-\end{figure}
-%----------------------------------------------------
-
-\subsubsection{Trading Strategy using LLM-based clusters}
-
-\hspace{0.5cm} The advantage of clustering with an LLM is that signals become cleaner and more interpretable. The selection of clusters by the \textit{Greedy} algorithm is highly correlated with the direction of the shocks. Intuitively, the stock price of a firm that is negatively affected by a shock is expected to go down and vice versa.
-
-\mx 
-Looking at \cref{tab:LLM_cluster_mapping_extended} we can clearly see that both algorithms go short on articles classified as policy shocks independently of the direction (positive or negative). Both algorithms go long on the famous cluster 8, which, as we discussed above, concentrates about 1/3 of the news articles. This cluster contains articles categorized as undergoing financial minor and positive shocks.
-Counterintuitively, both algorithms go long on negative major demand shocks and they go short on positive major demand shocks. 
-
-
-
-%----------------------------------------------------
-\input{/Users/jesusvillotamiranda/Library/CloudStorage/OneDrive-UniversidaddeLaRioja/CEMFI/__MSc__/__Second_year__/6th_Term/MasterThesis/__Output/LLAMA_Cluster_Mapping_Extended.tex}
-%----------------------------------------------------
-
-\mx 
-In \cref{fig:LLM_portfolio_returns} we plot the cumulative returns of the portfolio based on LLM clustering ($\mathcal P_{LLM}$). As before, both algorithms perform really well on ``seen'' data. However, different from before, the \textit{Greedy} algorithm works well also on the Training Split (which it was not trained on). More importantly, both algorithms do a great job in the test data. As we can see, both are able to achieve a consistent profile of earnings through the split. 
-%In this case, the correlation of the trading signals generated by both algorithms is higher (0.693)
-
-\mx 
-The summary statistics of the portfolio are provided in \cref{tab:LLM_portfolio_statistics}, where we see confirmed the fact that both algorithms excel at generating profits even out of sample. 
-
-%----------------------- PLOT ----------------------
-\inserthere{fig:LLM_portfolio_returns}
-\begin{figure}[H]
-  \centering
-    \caption{Cumulative Returns of $\mathcal P_{LLM}$ across data splits}
-  \includegraphics[scale=0.58]{/Users/jesusvillotamiranda/Library/CloudStorage/OneDrive-UniversidaddeLaRioja/CEMFI/__MSc__/__Second_year__/6th_Term/MasterThesis/__Output/LLAMA_Portfolio_Cum_Returns_(L=4,theta=0.5k).pdf}
-  \subcaption*{\textit{Note: The holding period of the beta-neutral strategies is set to $L=4$ trading days and the number of traded clusters is  $\theta=\integer{0.5k}=10$, as now we have $k=20$ clusters. The selection criteria for these parameters is based on maximizing the Sharpe Ratios of the train and validation samples. }}
-  \label{fig:LLM_portfolio_returns}
-\end{figure}
-%----------------------------------------------------
-
-
-%\blue{
-%\begin{itemize}
-% \item The cumulative returns of the portfolio obtained by applying our selection algorithms to the LLM clusters is plotted in \cref{fig:LLM_portfolio_returns}. As we can see, different from before, now the portfolio does surprisingly well on unseen data (test set). 
-%  \item The visual results of the plot, are confirmed by the statistics of the portfolio, which we can see in \cref{tab:LLM_portfolio_statistics}.
-%  \item The correlation betweent he trading signals generated by the greedy and stable algorithm are, in this case, 0.693604
-%\end{itemize}
-%
-%}
-
-%--------------------- TABLE ------------------------
-\input{/Users/jesusvillotamiranda/Library/CloudStorage/OneDrive-UniversidaddeLaRioja/CEMFI/__MSc__/__Second_year__/6th_Term/MasterThesis/__Output/LLAMA_Portfolio_Statistics_(L=4,theta=0.5k).tex}
-%----------------------------------------------------
